[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oauth2freeipa"
version = "0.0.1"
authors = [
  { name="Félix-Antoine Fortin", email="felix@calculquebec.ca" },
]
description = "Package to create FreeIPA users after connecting in JupyterHub with oauthenticator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "jupyterhub",
  "oauthenticator"
]

[project.urls]
Homepage = "https://github.com/magiccastle/oauth2freeipa"
Issues = "https://github.com/magiccastle/oauth2freeipa/issues"
